--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <body>
     <h1>I'm a header 1!</h1>
     Hello there, awesome person! 
+  <img src="https://avatars.githubusercontent.com/u/78374015?v=4">
   </body>
 </html>
