--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <head>
   <title>My awesome web page</title>
 </head>
+<h1>I'm a header 1!</h1>
 <body>
-    <h1>I'm a header 1!</h1>
     Hello there, awesome person! 
   <img src="https://avatars.githubusercontent.com/u/78374015?v=4">
+  <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
   </body>
 </html>
