--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <title>My awesome web page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <h1>I'm a header 1!</h1>
 <body>
