--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<head>
-  <title>My awesome web page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+  <head>
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 <h1>I'm a header 1!</h1>
 <body>
     Hello there, awesome person! 
+
+</ol>
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
+  </body>
   <img src="https://avatars.githubusercontent.com/u/78374015?v=4">
   <ol>
     <li>This</li>
     <li>Is an</li>
     <li>Ordered list</li>
-</ol>
-    <li><a href="https://github.com">This is a link to GitHub!</a></li>
-  </body>
 </html>
