--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@
 </ol>
     <li><a href="https://github.com">This is a link to GitHub!</a></li>
   </body>
-  <div class="col-md-3 col-sm-3 col-xs-6"> <a href="#" class="btn btn-sm animated-button thar-three">Register</a> </div>
+Result Skip Results Iframe
+EDIT ON
+<div class="container">
+  <h1>Pure Css Button Hover effect</h1>
+  
+  <a href="#" class="button">Hover me</a>
+  
+<!--  optional  -->
+  <span>Made by <a href="http://alticreation.com/en">alticreation.com</a></span>
+</div>  
 </html>
