--- a/index.html
+++ b/index.html
@@ -12,15 +12,8 @@
     <li>Ordered list</li>
 </ol>
     <li><a href="https://github.com">This is a link to GitHub!</a></li>
+  textButton.setOnClickListener {
+    // Respond to button press
+}
   </body>
-Result Skip Results Iframe
-EDIT ON
-<div class="container">
-  <h1>Pure Css Button Hover effect</h1>
-  
-  <a href="#" class="button">Hover me</a>
-  
-<!--  optional  -->
-  <span>Made by <a href="http://alticreation.com/en">alticreation.com</a></span>
-</div>  
 </html>
