--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <li>Is an</li>
     <li>Ordered list</li>
 </ol>
-    <li><a href="https://github.com">This is a link to GitHub!</a></li>
-  textButton.setOnClickListener {
-    // Respond to button press
-}
+    <Button
+    android:id="@+id/textButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Text button"
+    style="@style/Widget.MaterialComponents.Button.TextButton"
+/>
   </body>
 </html>
