--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
     <li>Is an</li>
     <li>Ordered list</li>
 </ol>
-    <Button
-    android:id="@+id/textButton"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Text button"
-    style="@style/Widget.MaterialComponents.Button.TextButton"
-/>
+ <button class="button">Click Me</button>
   </body>
 </html>
