--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <li>Is an</li>
     <li>Ordered list</li>
 </ol>
- <button class="button">Click Me</button>
+<button class="button">Pill Button</button>
+  .button {
+  background-color: #ddd;
+  border: none;
+  color: black;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 16px;
+}
   </body>
 </html>
